--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,5 @@ dependencies {
     compile group: 'com.github.hatsuyuki15', name: 'jsoup', version:'master'
     compile group: 'org.apache.commons', name: 'commons-io', version:'1.3.2'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.5'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version:'1.1.7'
 }
