--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,5 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-io', version:'1.3.2'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.5'
     compile group: 'ch.qos.logback', name: 'logback-classic', version:'1.1.7'
+    compile group: 'com.google.guava', name: 'guava', version: '20.0'
 }
